--- a/src/main/resources/public/pages/auto-show.html
+++ b/src/main/resources/public/pages/auto-show.html
@@ -80,6 +80,7 @@
                 <span class="error-message" id="error-car-year" style="display: none;">This field is required</span>
 
                 <span id="response-result" style="display: none;"></span>
+                <p style="display:none;" class="loading-status" status="Loading">Saving order</p>
                 <div>
                     <button onclick="orderCar()">Order car</button>
                     <button onclick="noThanks()">Cancel</button>
