--- a/src/main/resources/public/pages/showroom.html
+++ b/src/main/resources/public/pages/showroom.html
@@ -37,7 +37,7 @@
     <button id="firstPersonBtn" style="flex-direction: column; align-items: center;">First Person View</button>
     <button id="thirdPersonBtn">Third Person View</button>
 </div>
-<a href="/cars-info" id="info-page">Check Vehicle Info</a>
+<a href="/cars-info" id="info-page">View Specifications</a>
 <div th:if="${access == 'no-access'}">
     <script>
         document.getElementById(`info-icon`).style.display = "none";
