--- a/src/main/resources/public/pages/reset-password.html
+++ b/src/main/resources/public/pages/reset-password.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/pages-style.css">
     <link rel="stylesheet" href="../css/reset-password.css">
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
     <script src="../js%20scripts/Sticky-Header.js"></script>
 </head>
 
@@ -29,6 +30,9 @@
         <p id="result-msg" style="display: none; color: #f1f1f1; border-radius: 3px;"></p>
     </form>
     <script src="../js%20scripts/Reset-Password.js"></script>
+</div>
+<div class="content">
+
 </div>
 <footer class="footer-section">
     <h3>NEWSLETTER</h3>
