--- a/src/main/resources/public/pages/auto-show.html
+++ b/src/main/resources/public/pages/auto-show.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css"
           href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="../js%20scripts/Sticky-Header.js"></script>
 </head>
@@ -26,10 +27,11 @@
 <div th:utext="${nav}"></div>
 <script src="../js%20scripts/mobile-menu.js"></script>
 <div class="show-room">
-    <header>
-        <h1>Welcome to Our Auto Show</h1>
-        <p>Discover the Latest and Greatest Cars</p>
-    </header>
+    <div>
+        <div class="img-container">
+            <img id="marinaxx-logo" style="width: 450px;margin: 2.5rem auto" src="../images/denko.svg" alt="">
+        </div>
+    </div>
     <div id="popup-container" class="popup-container">
         <div class="popup-content">
             <p class="motd-text">
@@ -56,7 +58,9 @@
     </div>
     <section>
         <h2>Available Cars</h2>
-        <div id="order-car-container" onclick="popUpOrderCar()">Order Car</div>
+        <div id="order-car-container-wrapper" bis_skin_checked="1">
+            <div id="order-car-container" onclick="popUpOrderCar()" bis_skin_checked="1">Order Car</div>
+        </div>
         <div id="order-car-menu">
             <div id="popup-order-car">
                 <i class="fas fa-window-close"></i>
@@ -127,13 +131,15 @@
                 <div class="car-info">
                     <h3>Porsche Carrera 2015</h3>
                 </div>
-                <div class="favorites" th:with="parts=${#strings.arraySplit(favsMap['Porsche Carrera 2015'] ?: '', ',')}">
+                <div class="favorites"
+                     th:with="parts=${#strings.arraySplit(favsMap['Porsche Carrera 2015'] ?: '', ',')}">
                     <h3 th:if="${parts != null && parts.length > 0}"
                         th:text="${parts[0] != null && parts[0] != '' ? 'Remove from Favorites' : 'Add to Favorites'}"></h3>
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -149,13 +155,15 @@
                 <div class="car-info">
                     <h3>Lamborghini Aventador 2020</h3>
                 </div>
-                <div class="favorites" th:with="parts=${#strings.arraySplit(favsMap['Lamborghini Aventador 2020'] ?: '', ',')}">
+                <div class="favorites"
+                     th:with="parts=${#strings.arraySplit(favsMap['Lamborghini Aventador 2020'] ?: '', ',')}">
                     <h3 th:if="${parts != null && parts.length > 0}"
                         th:text="${parts[0] != null && parts[0] != '' ? 'Remove from Favorites' : 'Add to Favorites'}"></h3>
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -171,13 +179,15 @@
                 <div class="car-info">
                     <h3>Lamborghini Gallardo 2007</h3>
                 </div>
-                <div class="favorites" th:with="parts=${#strings.arraySplit(favsMap['Lamborghini Gallardo 2007'] ?: '', ',')}">
+                <div class="favorites"
+                     th:with="parts=${#strings.arraySplit(favsMap['Lamborghini Gallardo 2007'] ?: '', ',')}">
                     <h3 th:if="${parts != null && parts.length > 0}"
                         th:text="${parts[0] != null && parts[0] != '' ? 'Remove from Favorites' : 'Add to Favorites'}"></h3>
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -193,13 +203,15 @@
                 <div class="car-info">
                     <h3>Toyota Supra Gr 2020</h3>
                 </div>
-                <div class="favorites" th:with="parts=${#strings.arraySplit(favsMap['Toyota Supra Gr 2020'] ?: '', ',')}">
+                <div class="favorites"
+                     th:with="parts=${#strings.arraySplit(favsMap['Toyota Supra Gr 2020'] ?: '', ',')}">
                     <h3 th:if="${parts != null && parts.length > 0}"
                         th:text="${parts[0] != null && parts[0] != '' ? 'Remove from Favorites' : 'Add to Favorites'}"></h3>
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -215,13 +227,15 @@
                 <div class="car-info">
                     <h3>Porsche Boxster 2016</h3>
                 </div>
-                <div class="favorites" th:with="parts=${#strings.arraySplit(favsMap['Porsche Boxster 2016'] ?: '', ',')}">
+                <div class="favorites"
+                     th:with="parts=${#strings.arraySplit(favsMap['Porsche Boxster 2016'] ?: '', ',')}">
                     <h3 th:if="${parts != null && parts.length > 0}"
                         th:text="${parts[0] != null && parts[0] != '' ? 'Remove from Favorites' : 'Add to Favorites'}"></h3>
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -243,7 +257,8 @@
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -264,7 +279,8 @@
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -285,7 +301,8 @@
                     <h3 th:unless="${parts != null && parts.length > 0}">Add to Favorites</h3>
                     <label class="add-fav">
                         <input th:class="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : ''}"
-                               type="checkbox" th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
+                               type="checkbox"
+                               th:checked="${parts != null && parts.length > 1 && parts[1] == 'true' ? 'checked' : null}"/>
                         <i class="icon-heart fas fa-heart">
                             <i class="icon-plus-sign fa-solid fa-plus"></i>
                         </i>
@@ -297,7 +314,10 @@
         </div>
     </section>
 </div>
-<h1 style="text-align: center;">Recently viewed cars</h1>
+<h1 style="color: white;
+    font-family: 'Poppins', sans-serif;
+    padding-top: 1rem;
+    text-align: center;">Recently viewed cars</h1>
 <div class="slider-container">
     <div class="lds-ring" id="recently-viewed-spinner">
         <div></div>
@@ -339,7 +359,7 @@
         console.log(entrie);
         entrie.addEventListener(`mouseover`, (e) => {
             if (e.currentTarget.parentNode.children[0].checked) {
-                e.currentTarget.style.color = `#333`;
+                e.currentTarget.style.color = `#797373`;
             } else {
                 e.currentTarget.style.color = `orange`;
             }
@@ -348,7 +368,7 @@
             if (e.currentTarget.parentNode.children[0].checked) {
                 e.currentTarget.style.color = `orange`;
             } else {
-                e.currentTarget.style.color = `#333`;
+                e.currentTarget.style.color = `#797373`;
             }
         });
     });
