--- a/src/main/resources/public/pages/cars-info.html
+++ b/src/main/resources/public/pages/cars-info.html
@@ -14,6 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <script src="../js%20scripts/Sticky-Header.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
 </head>
 
 <body>
@@ -57,6 +58,9 @@
         </div>
     </div>
     <script src="../js%20scripts/Cars-Data.js"></script>
+</div>
+<div class="content">
+
 </div>
 <footer class="footer-section">
     <h3>NEWSLETTER</h3>
