--- a/src/main/resources/public/pages/index.html
+++ b/src/main/resources/public/pages/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css"
           href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="../css/index.css">
     <script src="../js%20scripts/Sticky-Header.js"></script>
 </head>
@@ -72,10 +73,8 @@
         <a href="/auto-show" class="cta-button">Check Now</a>
     </div>
 </div>
-<div class="cars-container">
-    <h1>Small Preview of the Auto Show</h1>
-</div>
 <div class="cars-container" id="last">
+    <h1 id="cars-container-h1">Small Preview of the Auto Show</h1>
     <div class="car-card">
         <div class="img-container" data-flickity='{ "lazyLoad": true }'>
             <img data-flickity-lazyload="../images/g65.webp" alt="">
@@ -180,7 +179,10 @@
         });
     });
 </script>
-<h1 style="text-align: center;">Recently viewed cars</h1>
+<h1 style="color: white;
+    font-family: 'Poppins', sans-serif;
+    padding-top: 1rem;
+    text-align: center;">Recently viewed cars</h1>
 <div class="slider-container">
     <div class="lds-ring" id="recently-viewed-spinner">
         <div></div>
