--- a/src/main/resources/public/pages/login.html
+++ b/src/main/resources/public/pages/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/pages-style.css">
     <link rel="stylesheet" href="../css/register.css">
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
     <style>
         .alert {
             display: none;
@@ -116,6 +117,9 @@
             <button onclick="noThanks()">Close</button>
         </div>
     </div>
+</div>
+<div class="content">
+
 </div>
 <footer class="footer-section">
     <h3>NEWSLETTER</h3>
