--- a/src/main/resources/public/pages/profile.html
+++ b/src/main/resources/public/pages/profile.html
@@ -17,6 +17,7 @@
           href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
     <script src="../js%20scripts/Sticky-Header.js"></script>
 </head>
 
@@ -80,7 +81,7 @@
             <button type="submit" id="change-password">Change password</button>
             <button type="submit" id="forgotten-password">Reset password</button>
             <p style="display: none;" id="loading-animation-password-reset" status="Pending">Initiating password reset, please wait</p>
-            <p id="forgotten-password-result" style="display: none; border-radius: 3px;"></p>
+            <p id="forgotten-password-result" style="display: none; border-radius: 3px; margin: 0 auto"></p>
             <p id="warning-fields" style="display: none;"></p>
             <label for="favorite-vehicles">Favorite Vehicles</label>
             <ul id="favorite-vehicles">
@@ -120,7 +121,10 @@
         </div>
     </div>
 </section>
-<h1 style="text-align: center;">Recently viewed cars</h1>
+<h1 style="color: white;
+    font-family: 'Poppins', sans-serif;
+    padding-top: 1rem;
+    text-align: center;">Recently viewed cars</h1>
 <div class="slider-container">
     <div class="lds-ring" id="recently-viewed-spinner"><div></div><div></div><div></div><div></div></div>
     <div th:utext="${recentlyViewed}" class="recently-viewed-cars" style="display: none; justify-content: center; flex-wrap: wrap;" bis_skin_checked="1"></div>
@@ -159,7 +163,7 @@
         document.querySelectorAll(`.add-fav .icon-heart`).forEach(entrie => {
             entrie.addEventListener(`mouseover`, (e) => {
                 if (e.currentTarget.parentNode.children[0].checked) {
-                    e.currentTarget.style.color = `#333`;
+                    e.currentTarget.style.color = `#797373`;
                 }
             });
             entrie.addEventListener(`mouseout`, (e) => {
