--- a/src/main/resources/public/pages/showroom.html
+++ b/src/main/resources/public/pages/showroom.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/showroom.css">
     <meta property="og:image" content="images/logo.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap">
     <script type="importmap">
         {
             "imports": {
@@ -60,7 +61,7 @@
     const carParam = urlParams.get('car');
     document.getElementById(`info-page`).href = `cars-info.html?car=${carParam}`;
 </script>
-<footer class="footer-section">
+<footer class="footer-section" style="margin-top: 3rem">
     <h3>NEWSLETTER</h3>
     <p>Subscribe to our Newsletter!</p>
     <div class="subscribe-form">
